# gdrive-perm-export

./: README.rst  pyproject.toml
gdrive_perm_export/: main.py
