[tool.poetry]
name = "gdrive-perm-export"
version = "0.1.0"
description = ""
authors = ["Ulrich Petri <ulo@ulo.pe>"]

[tool.poetry.dependencies]
python = "*"
google-api-python-client = "^1.7"
oauth2client = "^4.1"
pprintpp = "^0.3.0"
click = "^6.7"
more-itertools = "^4.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
gdrive-perm-export = 'gdrive_perm_export.main:main'
